# Codeblocks

./: AUTHORS  BUGS  BUILD  COMPILERS  ChangeLog  ChangeLog.xsl  NEWS  README  TODO  acinclude.m4  bootstrap  configure.ac  update_revision.sh
src/: CodeBlocks-unix.cbp  CodeBlocks-unix.workspace  CodeBlocks.workspace  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30-unix.workspace  CodeBlocks_wx30.cbp  CodeBlocks_wx30.workspace  CodeBlocks_wx30_64.cbp  CodeBlocks_wx30_64.workspace  ContribPlugins-unix.workspace  ContribPlugins.workspace  ContribPlugins_wx30-unix.workspace  ContribPlugins_wx30.workspace  Makefile.am  batch_build_all  batch_build_core  cbgcc420.script  hello.c  hello.txt  mac_pack  sdk.doxy  update30
src/include/: annoyingdialog.h  autodetectcompilers.h  backgroundthread.h  base64.h  blockallocated.h  cbauibook.h  cbcolourmanager.h  cbdebugger_interfaces.h  cbeditor.h  cbeditorprintout.h  cbexception.h  cbexecute.h  cbfunctor.h  cbplugin.h  cbproject.h  cbstatusbar.h  cbstyledtextctrl.h  cbthreadpool.h  cbtool.h  cbtreectrl.h  cbworkspace.h  compileoptionsbase.h  compiler.h  compilercommandgenerator.h  compilerfactory.h  compileroptions.h  compiletargetbase.h  configmanager.h  configurationpanel.h  configuretoolsdlg.h  confirmreplacedlg.h  crc32.h  debuggermanager.h  editarrayfiledlg.h  editarrayorderdlg.h  editarraystringdlg.h  editor_hooks.h  editorbase.h  editorcolourset.h  editorlexerloader.h  (+59 more)
src/mime/: codeblocks.desktop  codeblocks.xml
src/scripts/: edit_startup_script.script  gdb_types.script  make_dist.script  plugin_find_broken_files.script  (+3 more)
(+2346 files in other folders)
