SUBDIRS = include base build_tools mime sdk src plugins tools templates scripts wxsmith

dist_pkgdata_DATA = tips.txt \
			 hello.c \
			 hello.txt	

EXTRA_DIST = $(srcdir)/*.cbp \
		$(srcdir)/*.workspace \
		exchndl.dll \
		mac_pack \
		$(srcdir)/update* \
		$(srcdir)/batch* \
		sdk.doxy
